# t1-topicos-deep-learning

./: .gitignore  balanceamento_dataset.ipynb  cnn_classificacao.ipynb  main.ipynb  pyproject.toml  readme.md  requirements.txt
