[tool.poetry]
name = "trab-1"
version = "0.1.0"
description = ""
authors = ["Eduardo-RFarias <eduardo.rfarias@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
tensorflow-cpu = "^2.18.0"
keras = "^3.7.0"
opencv-python = "^4.10.0.84"
albumentations = "^1.4.22"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
